// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button hello 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "marginTop": 10,
      "opacity": 1,
    }
  }
>
  <Text>
    Hello
  </Text>
</View>
`;

exports[`Storyshots Button world 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "marginTop": 10,
      "opacity": 1,
    }
  }
>
  <Text>
    World
  </Text>
</View>
`;
